# anonymous-credentials

./: .gitignore  LICENSE-MIT  aggregated_output.csv  cargo.toml  error.md  multi-use-credentials.rs  readme.md  t_siris_benchmarks.csv  t_utt_benchmarks.csv
BilinearPairing/: Cargo.toml
BilinearPairing/src/: main.rs
adder/src/: lib.rs
arithmetic/euclidean-algorithm/: Cargo.toml
bbs/: Cargo.toml
bbs/src/: keygen.rs  lib.rs  signature.rs
bbs_plus/: Cargo.toml  readme.md
bbs_plus/src/: anon_cred.rs  keygen.rs  lib.rs  proofsystem.rs  signature.rs  test_helpers.rs
bbs_plus_16/: Cargo.toml
bbs_plus_16/src/: anon_cred.rs  keygen.rs  proofsystem.rs  publicparams.rs  signature.rs  test_helpers.rs
bbs_plus_og/: Cargo.toml
bbs_plus_og/src/: anon_cred.rs  keygen.rs  lib.rs  proofsystem.rs  publicparams.rs  signature.rs  test_helpers.rs  utils.rs
bbsplus/: Cargo.toml
bbsplus/src/: bbsplusproofs.rs  keygen.rs  lib.rs  signature.rs  test_helpers.rs
benches/: Cargo.toml
benches/benches/: bbs_plus_16_anoncreds.rs  bbs_plus_anoncreds.rs  bbs_plus_og_anoncreds.rs  pairing.rs  pairing_bench.rs  proofs.rs  ps_anoncreds.rs  ps_equality.rs  ps_signature.rs  ps_utt_anoncreds.rs  ps_utt_anoncreds_imp.rs  ps_utt_anoncreds_std.rs  ps_utt_ts_std.rs  psutt_equality_split.rs  psutt_improved_equality_split.rs  schnorr.rs  schnorr_bench.rs  vrf_benchmarks.rs  vrf_utt.rs
bulletproofs/: Cargo.toml
bulletproofs/src/: hashing_utils.rs  lib.rs  range_proof.rs  range_proof_arbitrary_range.rs  setup.rs  weighted_norm_linear_argument.rs
cl_signatures/: Cargo.toml  readme.md
cl_signatures/src/: ark_fq.rs  ark_g.rs  ark_p.rs  ark_psdn.rs  main.rs  pairing.rs  person.rs  sig_a.rs  utils.rs
crypto_benchmarks/: Cargo.toml
crypto_benchmarks/src/: encryption_camenisch_shoup.rs  lib.rs  randomness.rs  testing.rs  testing2.rs  testing3.rs  vrf_testing.rs  vrf_utt.rs  vrf_utt2.rs
curve_point_test/: Cargo.toml
elliptic-curve/src/: main.rs
ellipticcurve/curve_point_test/tests/: secp256k1_tests.rs
ellipticcurve/elliptic-curve/: Cargo.toml
ellipticcurve/elliptic-curve/src/: lib.rs  main.rs
ellipticcurve/elliptic-curve/tests/: secp256k1_tests.rs
encryption/: Cargo.toml
freivald/src/: main.rs
jupyter/: readme.md  zkp.ipynb
jupyter/.ipynb_checkpoints/: zkp-checkpoint.ipynb
merkletree/: Cargo.toml
merkletree/src/: main.rs  proof.rs
mimc_abc/: Cargo.toml
mimc_abc/benches/: credential_scenarios.rs
mimc_abc/benches_analysis/: analysis.py  table_maker.py
mimc_abc/benches_analysis/extracts/: extract.csv
mimc_abc/src/: commitment.rs  credential.rs  error.rs  identity_binding.rs  lib.rs  linked_credentials.rs  multi_credential.rs  multi_identity_credentials.rs  multi_issuer.rs  proof.rs  protocol.rs  public_params.rs  signature.rs  verkey.rs
protocol/: Cargo.toml
ps/: Cargo.toml
ps/src/: anon_cred.rs  commitment.rs  helpers.rs  keygen.rs  keygen_coconut.rs  lib.rs  multi_m.rs  proofsystem.rs  protocol.rs  ps_anoncred_sigs.rs  psproofs.rs  publicparams.rs  signature.rs  signature_coconut.rs  single_m_ac.rs  test_helpers.rs  tests.rs  tests_old.rs  utils.rs
ps_utt/: Cargo.toml
ps_utt/src/: anon_cred.rs  anon_cred_improved.rs  benchmark_helpers.rs  commitment.rs  credential.rs  keygen.rs  lib.rs  proofsystem.rs  ps_helpers.rs  publicparams.rs  signature.rs  test_helpers.rs  vrf.rs
ps_utt_ts/: Cargo.toml  readme.md
ps_utt_ts/benches/: t_siris.rs  t_utt.rs
ps_utt_ts/benches_analysis/: t_siris_extractor.py  t_utt_plotter_N_threshold.py  t_utt_plotter_n_attributes.py
ps_utt_ts/src/: commitment.rs  credential.rs  dkg_keygen.rs  dkg_shamir.rs  errors.rs  keygen.rs  lib.rs  nullifier.rs  proofs.rs  proofsystem.rs  protocol.rs  publicparams.rs  schnorr_batch.rs  signature.rs  signature_ts.rs  signer.rs  symmetric_commitment.rs  tests.rs  user.rs  verification.rs  verifier.rs
sage/: MoonMath.ipynb
sage/.ipynb_checkpoints/: MoonMath-checkpoint.ipynb
schnorr/: Cargo.toml
schnorr/src/: lib.rs  schnorr.rs  schnorr_pairing.rs
scrap/: Cargo.toml
scrap/src/: main.rs
sigma_benches/: Cargo.toml
sigma_benches/benches/: equality.rs
sigma_protocols/: Cargo.toml
sigma_protocols/src/: lib.rs  pedersen_proof.rs
signatures/: Cargo.toml
signatures/src/: main.rs
sps-eq/: Cargo.toml  readme.md
src/: bbs.rs  hash.rs  lib.rs  multi_m.rs  pairing.rs  pairing_util.rs  pairs.rs  pedersen.rs  ps_anoncred_sigs.rs  randomized_pairing.rs  schnorr.rs  single_m.rs  single_m_ac.rs  testing.rs  vrf.rs
system/: Cargo.toml
system/src/: lib.rs  single_issuer.rs
utils/: Cargo.toml
utils/src/: dkg.rs  hash.rs  helpers.rs  lib.rs  pairing.rs  pairing_util.rs  pairs.rs  pedersen.rs
vanity-address/: Cargo.toml  readme.md
vanity-address/src/: main.rs
vrf/: Cargo.toml
vrf/bench_analysis/: extractor.py
vrf/benches/: ed25519.rs  secp256k1.rs  vrf_benchmarks.rs
vrf/src/: dy.rs  dy_pf.rs  dy_pf_priv.rs  dy_pf_priv_commited_output.rs  lib.rs  p_dy.rs  p_dy_priv.rs  p_dy_priv_extra.rs  vrf.rs  vrf_com_inv.rs
z_bench_analysis/: threshold_ps_visualizer3.ipynb  vrf_visualizer.ipynb
z_bench_analysis/anon_creds/: anoncreds_visualizer2.ipynb  extractor_utt_vs_us.py  plotter_all_anon_creds.py
z_bench_analysis/pairing/: analysis.py  extractor.py
z_bench_analysis/schnorr/: analysis.py  extractor.py
z_py_tests/: bbs_plus_results.csv  benchmark.ipynb  ps.py  ps_credential_scaling.csv  ps_credential_scaling.json  ps_utt.py  psutt_credential_scaling.csv  psutt_credential_scaling.json  psutt_equality_split.json  psutt_improved_prover_verifier.csv  psutt_improved_prover_verifier.json  psutt_prover_verifier.csv  sequence.html  test.py
zeroknowledge/zkp-bn254/src/: main.rs
zkp/: Cargo.toml
zkp-scheme1/: Cargo.toml
zkp-scheme1/src/: main.rs
