[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-bls12-381 = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
itertools = { workspace = true }
zeroize = { workspace = true }
blake2 = { version = "0.10", default-features = false }
schnorr = {default-features = false, path = "../schnorr" }
utils = {default-features = false, path = "../utils" }
ps = {default-features = false, path = "../ps" }
ps_utt = {default-features = false, path = "../ps_utt" }
bbs_plus_16 = {default-features = false, path = "../bbs_plus_16" }
bbs_plus_og = {default-features = false, path = "../bbs_plus_og" }
crypto_benchmarks = {default-features = false, path = "../crypto_benchmarks" }


[dev-dependencies]
criterion = "0.5"
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }


[[bench]]
name = "psutt_improved_equality_split"
path = "benches/psutt_improved_equality_split.rs"
harness = false

[[bench]]
name = "bbs_plus_16_anoncreds"
path = "benches/bbs_plus_16_anoncreds.rs"
harness = false

[[bench]]
name = "bbs_plus_og_anoncreds"
path = "benches/bbs_plus_og_anoncreds.rs"
harness = false

[[bench]]
name = "ps_utt_anoncreds_std"
path = "benches/ps_utt_anoncreds_std.rs"
harness = false

[[bench]]
name = "ps_utt_anoncreds_imp"
path = "benches/ps_utt_anoncreds_imp.rs"
harness = false

[[bench]]
name = "ps_anoncreds"
path = "benches/ps_anoncreds.rs"
harness = false

[[bench]]
name = "schnorr_bench"
path = "benches/schnorr_bench.rs"
harness = false

[[bench]]
name = "pairing_bench"
path = "benches/pairing_bench.rs"
harness = false

[[bench]]
name = "vrf_utt"
path = "benches/vrf_utt.rs"
harness = false