[package]
name = "ps"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "^0.4.1", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-groth16 = { version = "^0.4.0", default-features = false }
rayon = { version = "1" }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.7.0", features = ["derive"] }
blake2 = { version = "0.10", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
itertools = "0.12.1"

[dev-dependencies]
criterion = "0.5"
num = "0.4"
subtle = "2"