[package]
name = "sigma_protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bls12-381 = { workspace = true }
blake2 = { workspace = true }
digest = { workspace = true }
ark-serialize = { workspace = true }
lazy_static = { workspace = true }
ark-std = { workspace = true }