[package]
name = "vanity-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build = "0.0.2"
secp256k1 = {version = "0.27.0", features = ["bitcoin_hashes", "rand"]}
rand = "0.8.4"
hashes = "0.1.9"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
hex = "0.4.3"
