[package]
name = "vrf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-groth16.workspace = true
rayon = { workspace = true}
digest.workspace = true
serde.workspace = true
serde_with.workspace = true
zeroize.workspace = true
blake2.workspace = true
ark-bls12-381.workspace = true
ark-crypto-primitives.workspace = true
itertools.workspace = true
lazy_static.workspace = true
schnorr = {default-features = false, path = "../schnorr" }
utils = {default-features = false, path = "../utils" }

[dev-dependencies]
rayon = { workspace = true}
ark-bls12-381.workspace = true
serde_json = "1.0"
rand_chacha = "0.3"
criterion = "0.5"
num = "0.4"
subtle = "2"

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-groth16/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["ark-std/parallel", "std", "ark-ff/parallel", "ark-poly/parallel", "ark-groth16/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel"]

[[bench]]
name = "vrf_benchmarks"
harness = false